--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta charset='utf-8'>
    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
    <title>Welcome!</title>
+   <a href="https://www.google.com">Click me to open my blog</a>
    <meta name='viewport' content='width=device-width, initial-scale=1'>
    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
    <script src='main.js'></script>
