--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<title>Welcome to ReLyf's shinannigans!</title>
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
-<head>
-   <meta charset='utf-8'>
-   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-   <title>Welcome!</title>
-   <a href="https://www.google.com">Click me to open my blog</a>
-   <meta name='viewport' content='width=device-width, initial-scale=1'>
-   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-   <script src='main.js'></script>
-</head>
-	<body>
+<a href="https://www.google.com">Click me to open my blog</a>
    <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" 
         height="335px"
         width="595px"/>
-	</body>
 </body>
 </html>
