--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+<body>
 <body>
 <title>Welcome to ReLyf's shinannigans!</title>
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
-<a href="https://www.google.com">Click me to open my blog</a>
+<p href="https://www.google.com">Click me to open my blog</p>
+
    <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" 
         height="335px"
         width="595px"/>
