--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ div {text-align: center;}
 <title>Welcome to ReLyf's shinannigans!</title>
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
-<p <a href="https://www.google.com">Click me to open my blog</a> </p>
+<div style="text-align:center">    
+  <a href="http//www.google.com">More stuff that i do or something maybe idk>
+</div>
 </body>
 		<body>
 				<p class="aligncenter">
