--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ div {text-align: center;}
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
 <div style="text-align:center">    
-  <a href="http//www.google.com">More stuff that i do or something maybe idk>
+  <a href="https://www.google.com">More stuff that i do or something maybe idk probably>
+  <!-- more links here -->
 </div>
 </body>
 		<body>
