--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
+</head>
+<head>
 <style>
 h1 {text-align: center;}
 p {text-align: center;}
