--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
 </head>
+<body
+style="background-color:#000000;">
+</body>  
 <head>
 <style>
 h1 {text-align: center;}
@@ -15,8 +18,7 @@ div {text-align: center;}
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
 <div style="text-align:center">    
-  <a href="https://www.google.com">More stuff that i do or something maybe idk probably>
-  <!-- more links here -->
+  <a href="https://www.google.com">More stuff that i do or something maybe idk probably
 </div>
 </body>
 		<body>
