--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@ style="background-color:#000000;">
 <head>
 <style>
 h1 {text-align: center;}
+@supports (-webkit-text-stroke: 1px white) {
+  h1 {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white;
+  }
+}
 p {text-align: center;}
+@supports (-webkit-text-stroke: 1px white) {
+  p {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white;
+  }
+}
 div {text-align: center;}
+@supports (-webkit-text-stroke: 1px white) {
+  div {
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white;
+  }
+}
 </style>
 </head>
 <body>
