--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ div {text-align: center;}
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
 <div style="text-align:center">    
-  <a href="https://www.google.com">More stuff that i do or something maybe idk probably
+  <a href="https://www.google.com">More stuff that i do or something maybe idk probably </a>
 </div>
 </body>
 		<body>
