--- a/subpage/10dosasu.html
+++ b/subpage/10dosasu.html
@@ -5,7 +5,7 @@
 Makan soto pake garpu</h1>
 
 <div style="text-align:center">    
-  <a href="relyf47.github.io">Take me back</a>
+  <a href="home">Take me back</a>
 </div>
 </body>
 </html>
