--- a/10dosasu.html
+++ b/10dosasu.html
@@ -5,7 +5,7 @@
 Makan soto pake garpu</h1>
 
 <div style="text-align:center">    
-  <a href="index.html">Take me back</a>
+  <a href="https://relyf47.github.io/index.html">Take me back</a>
 </div>
 </body>
 </html>
