--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ div {text-align: center;}
 		<body>
 				<p class="aligncenter">
 					<img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" 
-						height="100%"/>
+						width="auto"
+						height="auto"/>
 </p>
 
 </body>
