--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ div {text-align: center;}
 		<body>
 				<p class="aligncenter">
 					<img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" 
-						width="auto"
+						max-width="100%"
 						height="auto"/>
 </p>
 
