--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ div {text-align: center;}
 		<body>
 				<p class="aligncenter">
 					<img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" 
-						max-height="100%"
-						max-width="100%"/>
+						height="100%"
+						width="100%"/>
 </p>
 
 </body>
