--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@ div {text-align: center;}
     -webkit-text-fill-color: white;
   }
 }
+
+.box {
+  display:inline-block;
+  width:100%;
+  text-align:center;
+}
+img {
+  display:inline-block;
+  width:768px;
+  margin:0 auto;
+}
+
+@media only screen and (max-width: 767px) {
+    img {
+        width:100%;
+    }
+}
 </style>
 </head>
 <body>
@@ -43,12 +60,8 @@ div {text-align: center;}
   <a href="https://relyf47.github.io/10dosasu.html">More stuff that i do or something maybe idk probably </a>
 </div>
 </body>
-		<body>
-				<p class="aligncenter">
-					<img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" 
-						height="100%"
-						width="100%"/>
-</p>
-
+<div class="box">
+  <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif">
+</div>
 </body>
 </html>
