--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@ img {
   <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif">
 </div>
 </body>
-<audio src="main.ogg" controls="false" autostart="true" loop="true"> </audio>
+<audio src="https://relyf47.github.io/main.ogg" controls="false" autostart="true" loop="true"> </audio>
 
 </html>
