--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@ img {
         width:100%;
     }
 }
+
+.tinybox {
+  display:inline-block;
+  width:20%;
+  text-align:center;
+}
+img {
+  display:inline-block;
+  width:768px;
+  margin:0 auto;
+}
+
+@media only screen and (max-width: 767px) {
+    img {
+        width:20%;
+    }
+}
 </style>
 </head>
 <body>
@@ -63,7 +80,12 @@ img {
 <div class="box">
   <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif">
 </div>
-</body>
-<audio src="https://relyf47.github.io/main.ogg" style="display:none;" autoplay>
 
+<div style="text-align:left">    
+  <a href="https://relyf47.github.io/myinfo.html">
+  <div class="tinybox">
+  <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif">
+</div> </a>
+
+</body>
 </html>
