--- a/myinfo.html
+++ b/myinfo.html
@@ -26,13 +26,13 @@ img {
 </head>
 <body>
 <h1 style="text-align:center">
-My Info!
-
+My Info! </h1>
+<h2>
 [[[REDACTED]]]
 <div class="box">
   <img src="https://cdn.discordapp.com/emojis/936075761037738025.webp">
 </div>
-</h1>
+</h2>
 
 <div style="text-align:center">    
   <a href="https://relyf47.github.io/index.html">Take me back</a>
