--- a/index.html
+++ b/index.html
@@ -51,22 +51,6 @@ img {
     }
 }
 
-.tinybox {
-  display:inline-block;
-  width:20%;
-  text-align:center;
-}
-img {
-  display:inline-block;
-  width:768px;
-  margin:0 auto;
-}
-
-@media only screen and (max-width: 125px) {
-    img {
-        width:20%;
-    }
-}
 </style>
 </head>
 <body>
@@ -83,8 +67,8 @@ img {
 
 <div style="text-align:left">    
   <a href="https://relyf47.github.io/myinfo.html">
-  <div class="tinybox">
-  <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif">
+  <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
+            width="125px" />
 </div> </a>
 
 </body>
