--- a/myinfo.html
+++ b/myinfo.html
@@ -27,7 +27,7 @@ img {
 <body>
 <h1 style="text-align:center">
 My Info! </h1>
-<h2>
+<h2 style="text-align:center">
 [[[REDACTED]]]
 <div class="box">
   <img src="https://cdn.discordapp.com/emojis/936075761037738025.webp">
