--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ img {
 <div class="box">
   <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif">
 </div>
-<p>   
+<p class="alignleft">   
 	<a href="https://relyf47.github.io/myinfo.html">
 			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
             width="125px"/>
