--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ img {
 </head>
 <body>
 <title>Welcome to ReLyf's shinannigans!</title>
-<meta content="ReLyf not so fun site" property="og:title" />
+<meta content="ReLyf's not so fun site" property="og:title" />
 <meta content="who needs description, its literally a fun passion project or something" property="og:description" />
 <meta content="https://relyf47.github.io" property="og:url" />
 <meta content="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" property="og:image" />
