--- a/myinfo.html
+++ b/myinfo.html
@@ -33,7 +33,9 @@ My Info! </h1>
   <img src="https://cdn.discordapp.com/emojis/936075761037738025.webp">
 </div>
 </h2>
-
+<h1 style="text-align:center">
+oh btw before you leave listen to my favourite studying song </h1>
+<audio src="https://relyf47.github.io/main.ogg" controls="controls" autostart="true" loop="true"> </audio>
 <div style="text-align:center">    
   <a href="https://relyf47.github.io/index.html">Take me back</a>
 </div>
