--- a/myinfo.html
+++ b/myinfo.html
@@ -35,7 +35,7 @@ My Info! </h1>
 </h2>
 <h1 style="text-align:center">
 oh btw before you leave listen to my favourite studying song </h1>
-<audio src="https://relyf47.github.io/main.ogg" controls="controls" autostart="true" loop="true"> </audio>
+<audio style="align:center" src="https://relyf47.github.io/main.ogg" controls="controls" autostart="true" loop="true"> </audio>
 <div style="text-align:center">    
   <a href="https://relyf47.github.io/index.html">Take me back</a>
 </div>
