--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@ img {
 <meta content="ReLyf's not so fun site" property="og:title" />
 <meta content="who needs description, its literally a fun passion project or something" property="og:description" />
 <meta content="https://relyf47.github.io" property="og:url" />
-<meta content="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif" property="og:image" />
+<meta content="https://cdn.discordapp.com/attachments/1148825138876383234/1153356823156502649/balls.png" property="og:image" />
 <meta content="#Ffd1dc" data-react-helmet="true" name="theme-color" />
 <meta name="twitter:card" content="summary_large_image">
+<meta property="og:type" content="article" />
+<meta property="og:locale" content="en_GB" />
+<meta property="og:locale:alternate" content="fr_FR" />
+<meta property="og:locale:alternate" content="es_ES" />
+
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
 <div style="text-align:center">    
