--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
 <h1>Hello People who is probably my teacher</h1>
 <p>How do people make good website?</p>
 <div style="text-align:center">    
-  <a href="https://relyf47.github.io/10dosasu.html">More stuff that i do or something maybe idk probably </a>
+  <a href="https://relyf47.github.io/subindex.html">More stuff that i do or something maybe idk probably </a>
 </div>
 </body>
 <div class="box">
