--- a/subindex.html
+++ b/subindex.html
@@ -7,15 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 </head>
 <style>
-    @font-face {
-        font-family: "havelock";
-        src="relyf47.github.io/havelock.otf";
-    }
-    p.custom_font {
-        font-family: "havelock";
-    }
+      @font-face { font-family: havelock; src: url('havelock.otf'); } 
+      h1 {
+         font-family: havelock
+      }
   .paragraph1 {
     font-size: 50px;
+	font-family: havelock
   }
   .paragraph2 {
     font-size: 13px;
@@ -26,7 +24,7 @@
 Hello welcome to the subindex here you can find stuff that i worked on</h1>
 <h1 style="text-align:center">
 (like blog post and stuff)</h1>
-<div class="paragraph1" style="text-align:left">
+<div class="paragraph1" style="text-align:center">
 <a href="https://relyf47.github.io/blog.html">The blogs that i've wrote</a>
 </div>
 
