--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+</head>
 <div class="header">
   <h2>Re'sBlog</h2>
 </div>
@@ -9,7 +12,7 @@
       <h2>Kemacetan di indonesia</h2>
       <h5>Sebuah ide untuk mengatasi kemacetan di indonesia, 18 September 2023</h5>
       <div class="box">
-  <img src="http://pa1.narvii.com/6492/c6b758f49214240cbe25dbd4563a68ccfbc7a3d0_hq.gif">
+  <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153574935302778910/iu.png">
 </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis molestie a iaculis at erat pellentesque adipiscing commodo. Interdum posuere lorem ipsum dolor sit amet. Aenean sed adipiscing diam donec adipiscing tristique. Id leo in vitae turpis massa sed elementum tempus egestas. Aliquam faucibus purus in massa tempor nec feugiat nisl. Sit amet cursus sit amet dictum sit. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Nullam non nisi est sit. Tellus molestie nunc non blandit massa enim nec dui nunc. Erat nam at lectus urna. Egestas congue quisque egestas diam in.
 
