--- a/blog.html
+++ b/blog.html
@@ -75,6 +75,7 @@ body {
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
+  display:inline-block;
   float: left;
   width: 100%;
 }
@@ -115,12 +116,5 @@ body {
   margin-top: 20px;
 }
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
-    width: 100%;
-    padding: 0;
-  }
-}
 </style>
 </html>
