--- a/subindex.html
+++ b/subindex.html
@@ -12,17 +12,21 @@
          font-family: havelock
       }
   .paragraph1 {
-    font-size: 50px;
-	font-family: havelock
+    font-size: 2vw;
+	font-family: havelock;
+	text-align: center;
   }
   .paragraph2 {
-    font-size: 13px;
+    font-size: 1vw;
+	font-face: havelock;
+	text-align: center;
+	
   }
 </style>
 <body>
-<h1 style="text-align:center">
+<h1 class="paragraph1">
 Hello welcome to the subindex here you can find stuff that i worked on</h1>
-<h1 style="text-align:center">
+<h1 class="paragraph2">
 (like blog post and stuff)</h1>
 <div class="paragraph1" style="text-align:center">
 <a href="https://relyf47.github.io/blog.html">The blogs that i've wrote</a>
