--- a/blog.html
+++ b/blog.html
@@ -14,26 +14,13 @@
       <div class="box">
   <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153574935302778910/iu.png">
 </div>
-      <div class="card3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis molestie a iaculis at erat pellentesque adipiscing commodo. Interdum posuere lorem ipsum dolor sit amet. Aenean sed adipiscing diam donec adipiscing tristique. Id leo in vitae turpis massa sed elementum tempus egestas. Aliquam faucibus purus in massa tempor nec feugiat nisl. Sit amet cursus sit amet dictum sit. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Nullam non nisi est sit. Tellus molestie nunc non blandit massa enim nec dui nunc. Erat nam at lectus urna. Egestas congue quisque egestas diam in.
-
-Dignissim sodales ut eu sem integer vitae justo eget. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Egestas quis ipsum suspendisse ultrices gravida dictum. Felis eget velit aliquet sagittis id consectetur purus ut faucibus. Varius morbi enim nunc faucibus. Nulla facilisi cras fermentum odio eu feugiat. Sit amet aliquam id diam maecenas ultricies mi eget. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Fames ac turpis egestas maecenas pharetra convallis posuere morbi.
-
-Mauris vitae ultricies leo integer malesuada nunc vel. At quis risus sed vulputate. Elit duis tristique sollicitudin nibh sit amet commodo nulla. Tincidunt id aliquet risus feugiat in ante. Ultrices gravida dictum fusce ut placerat orci. Mus mauris vitae ultricies leo integer malesuada nunc. Commodo odio aenean sed adipiscing diam donec adipiscing tristique. Lorem ipsum dolor sit amet. Vitae justo eget magna fermentum iaculis. Faucibus turpis in eu mi. A scelerisque purus semper eget duis.
-
-Consectetur lorem donec massa sapien faucibus et. Sit amet consectetur adipiscing elit pellentesque. Pulvinar sapien et ligula ullamcorper malesuada. Blandit massa enim nec dui. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Eu nisl nunc mi ipsum faucibus vitae aliquet. Eget lorem dolor sed viverra ipsum. Fermentum leo vel orci porta non pulvinar. Magna sit amet purus gravida quis blandit. Et netus et malesuada fames ac turpis egestas integer eget. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Sit amet porttitor eget dolor morbi non.
-
-Augue interdum velit euismod in pellentesque. Donec pretium vulputate sapien nec sagittis aliquam malesuada. Ornare quam viverra orci sagittis eu volutpat odio facilisis mauris. Purus non enim praesent elementum facilisis leo vel fringilla. Elementum sagittis vitae et leo duis. Lectus sit amet est placerat in egestas. Tellus cras adipiscing enim eu turpis egestas. Lectus proin nibh nisl condimentum id venenatis. Dictum at tempor commodo ullamcorper a lacus. Vulputate eu scelerisque felis imperdiet proin fermentum. Est lorem ipsum dolor sit. Sodales ut eu sem integer vitae justo. Imperdiet nulla malesuada pellentesque elit eget. Tincidunt vitae semper quis lectus nulla at. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Risus sed vulputate odio ut enim. Amet est placerat in egestas erat imperdiet.
-
-Tristique et egestas quis ipsum suspendisse ultrices. Ultrices gravida dictum fusce ut placerat orci nulla. Morbi non arcu risus quis varius quam quisque. In pellentesque massa placerat duis ultricies lacus. Pharetra vel turpis nunc eget lorem dolor sed viverra. Tempus urna et pharetra pharetra massa. Mauris vitae ultricies leo integer malesuada nunc vel risus. Pretium vulputate sapien nec sagittis aliquam malesuada. Diam in arcu cursus euismod. Aenean pharetra magna ac placerat vestibulum lectus. Ut tristique et egestas quis ipsum suspendisse ultrices gravida. Ullamcorper eget nulla facilisi etiam dignissim diam. Aliquet eget sit amet tellus cras adipiscing enim.
-
-Lacinia at quis risus sed. Purus sit amet luctus venenatis lectus magna fringilla urna. Ut venenatis tellus in metus vulputate eu scelerisque felis. Cursus in hac habitasse platea dictumst quisque. Elit ut aliquam purus sit amet. Diam vulputate ut pharetra sit amet. Tortor id aliquet lectus proin. Pellentesque massa placerat duis ultricies lacus sed turpis. Felis eget nunc lobortis mattis aliquam faucibus. Turpis nunc eget lorem dolor sed viverra ipsum nunc.
-
-Nullam vehicula ipsum a arcu cursus vitae congue mauris. Hendrerit dolor magna eget est lorem. At varius vel pharetra vel turpis nunc eget lorem dolor. Est velit egestas dui id. Aliquam sem fringilla ut morbi tincidunt augue interdum velit euismod. Ultricies mi quis hendrerit dolor. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Tincidunt id aliquet risus feugiat in ante metus dictum at. Mi proin sed libero enim sed faucibus turpis in. Nunc sed velit dignissim sodales ut eu sem integer.
-
-Nec dui nunc mattis enim ut tellus elementum sagittis. Quis varius quam quisque id diam vel. Nunc sed augue lacus viverra vitae congue. Malesuada proin libero nunc consequat interdum. Risus nullam eget felis eget nunc lobortis mattis. Amet nisl suscipit adipiscing bibendum est ultricies integer. Placerat duis ultricies lacus sed turpis tincidunt id. Nibh tellus molestie nunc non blandit. Egestas sed sed risus pretium quam vulputate dignissim suspendisse. Ac auctor augue mauris augue neque gravida in fermentum et. Cras sed felis eget velit aliquet sagittis. Et sollicitudin ac orci phasellus. Morbi enim nunc faucibus a pellentesque sit amet porttitor eget. Fermentum leo vel orci porta non pulvinar. Sollicitudin ac orci phasellus egestas tellus. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Ut venenatis tellus in metus vulputate eu scelerisque.
-
-Vitae justo eget magna fermentum iaculis eu. Duis at tellus at urna condimentum mattis pellentesque. Dolor sit amet consectetur adipiscing elit. Vel pharetra vel turpis nunc eget lorem dolor sed viverra. Ac placerat vestibulum lectus mauris ultrices eros in cursus turpis. Nisi est sit amet facilisis magna etiam tempor. Malesuada pellentesque elit eget gravida. Pellentesque nec nam aliquam sem et tortor consequat id porta. Aliquam sem et tortor consequat id porta nibh venenatis cras. Tortor consequat id porta nibh venenatis cras sed felis eget. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Etiam dignissim diam quis enim lobortis scelerisque fermentum.</p>
-    </div>
+      <p class="card3">
+Dengan kemacetan di indonesia yang makin menjadi saya mencari beberapa cara untuk memperlancar kemacetan tersebut.
+<br> <b>1. Angkutan Umum Online</b> 
+<br> Cara kerjanya akan seperti GoJek, tapi daripada memesan hanya untuk 1 orang/kendaraan, driver Angkot ini
+<br> dapat pickup banyak orang sekaligus, dengan ketentuan sang driver hanya boleh mem-pickup penumpang yang ada
+<br> 	di rute yang sudah di pilih.
+	  </p>
     <div class="card">
       <h2>lorem ipsum</h2>
       <h5>eget duis at tellus at, Sep 2, 2017</h5>
@@ -113,8 +100,9 @@ body {
 }
 
 .card3 {
-  text-align: center;
+  text-align: left;
   font-size: 100%;
+  font-family: Times New Roman
 }
 
 /* Clear floats after the columns */
