--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@ img {
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="es_ES" />
 
-<h1>Hello People who is probably my teacher</h1>
-<p>How do people make good website?</p>
+<marquee style="color:white" width="100%" direction="right" height="250px" scrollamount="15">
+<img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif"> <br>
+<img src="https://media.discordapp.net/attachments/1148825138876383234/1153715456075640943/cooltext443471841872118.png"> <br>
+<img src="https://media.discordapp.net/attachments/1148825138876383234/1153715861388005497/cooltext443471923879971.png"> <br>
+</marquee>
 <div style="text-align:center">    
   <a href="https://relyf47.github.io/subindex.html">More stuff that i do or something maybe idk probably </a>
 </div>
