--- a/subindex.html
+++ b/subindex.html
@@ -25,7 +25,7 @@
 </style>
 <body>
 <h1 class="paragraph1">
-Hello welcome to the subindex here you can find stuff that i worked on</h1>
+Hello welcome to the subindex page <br> here you can find stuff that i've worked on</h1>
 <h1 class="paragraph2">
 (like blog post and stuff)</h1>
 <div class="paragraph1" style="text-align:center">
