--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@ div {text-align: center;}
   width:100%;
   text-align:center;
 }
+.alignleft {
+text-align:center;
+}
 img {
   display:inline-block;
-  width:768px;
+  max-width:100%;
   margin:0 auto;
+  
 }
 
 @media only screen and (max-width: 767px) {
@@ -66,7 +70,7 @@ img {
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="es_ES" />
 
-<marquee style="color:white" width="100%" direction="right" height="250px" scrollamount="15">
+<marquee class="box" width="100%" direction="right" height="300px" scrollamount="15">
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif"> <br>
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715456075640943/cooltext443471841872118.png"> <br>
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715861388005497/cooltext443471923879971.png"> <br>
@@ -81,7 +85,7 @@ img {
 <p class="alignleft">   
 	<a href="https://relyf47.github.io/myinfo.html">
 			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="125px"/>
+            width="595px"/>
 	</a>
 </p>
 
