--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@ img {
 <meta property="og:locale" content="en_GB" />
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="es_ES" />
+<meta name="viewport" content="width=1024">
 
-<marquee class="box" width="100%" direction="right" height="300px" scrollamount="15">
+<marquee class="box" width="100%" direction="right" height="265px" scrollamount="15">
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif"> <br>
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715456075640943/cooltext443471841872118.png"> <br>
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715861388005497/cooltext443471923879971.png"> <br>
@@ -85,7 +86,7 @@ img {
 <p class="alignleft">   
 	<a href="https://relyf47.github.io/myinfo.html">
 			<img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153332182543253635/Get-to-know-me-9-18-2023.gif"
-            width="595px"/>
+            width="350px"/>
 	</a>
 </p>
 
