--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
 <meta property="og:locale" content="en_GB" />
 <meta property="og:locale:alternate" content="fr_FR" />
 <meta property="og:locale:alternate" content="es_ES" />
-<meta name="viewport" content="width=1024">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <marquee class="box" width="100%" direction="right" height="265px" scrollamount="15">
 <img src="https://media.discordapp.net/attachments/1148825138876383234/1153715120875262022/cooltext443471749442843.gif"> <br>
