--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
+  <title> Re'sBlog </title>
 </head>
 <div class="card2">
   <h2><img src=https://media.discordapp.net/attachments/1148825138876383234/1153584127887560744/d98d55ba796b26ef112fafe3585a2ac16532e55eda39a3ee5e6b4b0d3255bfef95601890afd80709da39a3ee5e6b4b0d3255bfef95601890afd807091bdeacf769f8831326bcbe2cbb21971d.png></h2>
