--- a/myinfo.html
+++ b/myinfo.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
+  <title> I was gonna put the rickroll song but it doesnt work anymore </title>
 <style>
 .box {
   display:inline-block;
@@ -37,7 +39,7 @@ My Info! </h1>
 <h2 style="text-align:center">
 [[[REDACTED]]]
 <div class="box">
-  <img src="https://cdn.discordapp.com/emojis/936075761037738025.webp">
+  <img src="https://cdn.discordapp.com/attachments/1148825138876383234/1153734062545059840/rickroll-roll.gif">
 </div>
 </h2>
 <h1 style="text-align:center">
