--- a/subindex.html
+++ b/subindex.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <link rel="shortcut icon" type="image/x-icon" href="favico.png" />
+  <title> Welcome to actual content. </title>
 <head>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
