--- a/manifesto.html
+++ b/manifesto.html
@@ -1,57 +1,89 @@
 <html>
+<style>
+      @font-face { font-family: havelock; src: url('havelock.otf'); } 
+      h1 {
+         font-family: havelock
+      }
+  .paragraph1 {
+    font-size: 1vw;
+	font-family: havelock;
+	text-align: center;
+}
+</style>
 <body>
-<h1>
+<h1 class="paragraph1">
 
 Terkait dengan pencapaian tujuan professional, berikut hal-hal yang benar, kecuali: c. Tabel dapat dibuat dalam bentuk satu baris,
+<br>
+<span>&shy;</span>
+<br>
 Berikut data pendukung yang secara normal akan menguatkan motivasi anda, kecuali : d. Foto reuni
+<br>
+<span>&shy;</span>
+<br>
 Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali d. Perlu melihat makalah dari teman
+<br>
+<span>&shy;</span>
+<br>
 Terkait dengan kelebihan dalam hal seni, berikut hal-hal yang benar, kecuali: b. Menyenangi kegiatan di tempat ibadah
+<br>
+<span>&shy;</span>
+<br>
 Berikut hal-hal yang benar terkait kelebihan di bidang akademik, kecuali: b. Suka mendengarkan dosen bercerita
+<br>
+<span>&shy;</span>
+<br>
 Di bawah ini hal-hal terkait dengan potensi, kecuali: b. Potensi pasti akan menjadi kenyataan
+<br>
+<span>&shy;</span>
+<br>
 Data pendukung yang menunjukkan kegemaran anda: b. Foto kejuaraan
-Terkait dengan kelebihan dalam pengembangan, berikut hal-hal yang baik kecuali : d. Menilai sulitnya suatu ide untuk diterapkan
-Dalam pencapaian tujuan, diperlukan juga poster tahapan. Pertanyaan yang benar: d. Poster untuk membantu visualisasi pencapaian tahapan,
-JIka kita tidak merencanakan tujuan dengan baik, maka : c. Tidak akan mencapai hasil yang optimal
-Berikut hal-hal yang benar terkait kelebihan di bidang kepeminpnan, kecuali: Selalu berusaha menyenangkan semua orang
-Data pendukung yang menggambarkan diri anda paling lengkap : b. Foto pose bergaya
-Salah satu kelebihan yang perlu ditampilkan : e. Mudah belajar
-Hal berikut merupakan kelebihan yang sangat berguna untuk keng, kecuali : c. Suka olahraga, naik gunung atau pecinta alam.
-Tujuan dari mater pengenalan diri adalah c. Mengenal diri sendiri dengan baik
-Pemahaman yang perlu dilakukan terkait diri sendiri adalah hal-hal berikut, kecuali : c. Mengerti cita-cita 25 tahun yang akan datang
-Berikut contoh-contoh potensi, kecuali: e. Kesukaan menjadi orang nomor satu dan suka mempertahankan pendapat dengan keras berpotensi menjadi
-Proses untuk pengenalan diri terdiri dari hal-hal berikut, kecuali: b. Melihat hasil identifikasi diri teman sekelas
-Masukan dari orang lain mencakup hal-hal berikut, kecuali : b. Rekening tabungan
-Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali d. Rentang waktu adalah 40 tahun yang akan datang
-Terkait dengan kekurangan, pernyatan berikut yang benar, kecuali d. Mudah tidur adalah salah satu kekurangan
-Pada akhir makalah, hal berikut benar kecuali: c. Dituliskan semua kekurangan anda dengan sedikit penjelasan
-Dalam membuat makalah, berdasarkan data yang dimiliki, tahap pertama yang dilakukan : a. Membuat narasi singkat garis besar makalah
-Dalam hal kepentingan untuk berkomunikasi, berikut pernyataan yang benar: b. Nomor HP adalah data paling penting
-Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali c. Tidak perlu menuliskan kompetensi dan syarat untuk jabatan tersebut
-Terkait dengan identitas diri, berikut pernyataan yang benar: c. Nomor induk kependudukan adalah data unik
-Pada makalah bagian minat, hal berikut benar kecuali: b. Minat tidak perlu diberikan gambar
-Hal berikut benar terkait prinsip dalam mencari kelebihan diri, kecuali: c. Terlalu banyak menuliskan kelebihan diri membuat sombong
-Data identitas mencakup hal-hal berikut, kecuali: c. Hobi orangtua
-Untuk mendapatkan suatu jabatan tertentu, hal-hal berikut benar, kecuali a. Memiliki kedekatan personal dengan pemilik perusahaan
-Dalam pembuatan makalah bagian identitas, hal-hal berikut benar kecuali d. Besar foto 1/8 halaman
-Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali e. Data kompetensi harus didapat langsung dari situs perusahaan tersebut
-Keterangan paling penting untuk keadaan darurat karena kecelakaan : d. Data NIM
-Pada makalah bagian kelebihan, hal berikut benar kecuali: d. Semua kekurangan dituliskan dalam beberapa paragraph
-Tujuan dari perencanaan tujuan profesional adalah hal berikut, kecuali e. Mengenal kemampuan diri sendiri
-Hal-hal berikut terkait dengan pengenalan diri, kecuali : e. Melihat posisi diri sendiri di lingkungan
-Untuk narasi, hal-hal berikut benar kecuali : e. Narasi idola dijelaskan dalam beberapa halaman dan fotonya
-Kekurangan diri seharusnya: e. Diuyapakan untuk dihilangkan
-Hal berikut benar untuk minat, kecuali : b. Minat yang kita rasakan pasti benar
-Terkait dengan bakat, berikut hal yang benar, kecuali: c. Kalau anda berbakat pada pekerjaan itu namun kurang berminat, maka pekerjaan tersebut akan 
-Pada makalah bagian bakat, hal berikut benar kecuali: a. Tidak perlu menampilkan diagram atau gambar
-Pada makalah bagian potensi, hal berikut benar kecuali: c. Potensi yang tidak akan terwujud tidak perlu ditulis
-Pada makalah bagian kelebihan, hal berikut benar kecuali: c. Kelebihan boleh ditulis dalam bentuk poin-poin.
-Dalam pembuatan makalah bagian identitas : e. Identitas dibuat dalam bentuk tabel tak bergaris
-
-
-
+<br>
+<span>&shy;</span>
+<br>
+Terkait dengan kelebihan dalam pengembangan, berikut hal-hal yang baik kecuali : d. Menilai sulitnya suatu ide untuk diterapkan<br><span>&shy;</span><br>
+Dalam pencapaian tujuan, diperlukan juga poster tahapan. Pertanyaan yang benar: d. Poster untuk membantu visualisasi pencapaian tahapan,<br><span>&shy;</span><br>
+JIka kita tidak merencanakan tujuan dengan baik, maka : c. Tidak akan mencapai hasil yang optimal<br><span>&shy;</span><br>
+Berikut hal-hal yang benar terkait kelebihan di bidang kepeminpnan, kecuali: Selalu berusaha menyenangkan semua orang<br><span>&shy;</span><br>
+Data pendukung yang menggambarkan diri anda paling lengkap : b. Foto pose bergaya<br><span>&shy;</span><br>
+Salah satu kelebihan yang perlu ditampilkan : e. Mudah belajar<br><span>&shy;</span><br>
+Hal berikut merupakan kelebihan yang sangat berguna untuk keng, kecuali : c. Suka olahraga, naik gunung atau pecinta alam.<br><span>&shy;</span><br>
+Tujuan dari mater pengenalan diri adalah c. Mengenal diri sendiri dengan baik<br><span>&shy;</span><br>
+Pemahaman yang perlu dilakukan terkait diri sendiri adalah hal-hal berikut, kecuali : c. Mengerti cita-cita 25 tahun yang akan datang<br><span>&shy;</span><br>
+Berikut contoh-contoh potensi, kecuali: e. Kesukaan menjadi orang nomor satu dan suka mempertahankan pendapat dengan keras berpotensi menjadi<br><span>&shy;</span><br>
+Proses untuk pengenalan diri terdiri dari hal-hal berikut, kecuali: b. Melihat hasil identifikasi diri teman sekelas<br><span>&shy;</span><br>
+Masukan dari orang lain mencakup hal-hal berikut, kecuali : b. Rekening tabungan<br><span>&shy;</span><br>
+Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali d. Rentang waktu adalah 40 tahun yang akan datang<br><span>&shy;</span><br>
+Terkait dengan kekurangan, pernyatan berikut yang benar, kecuali d. Mudah tidur adalah salah satu kekurangan<br><span>&shy;</span><br>
+Pada akhir makalah, hal berikut benar kecuali: c. Dituliskan semua kekurangan anda dengan sedikit penjelasan<br><span>&shy;</span><br>
+Dalam membuat makalah, berdasarkan data yang dimiliki, tahap pertama yang dilakukan : a. Membuat narasi singkat garis besar makalah<br><span>&shy;</span><br>
+Dalam hal kepentingan untuk berkomunikasi, berikut pernyataan yang benar: b. Nomor HP adalah data paling penting<br><span>&shy;</span><br>
+Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali c. Tidak perlu menuliskan kompetensi dan syarat untuk jabatan tersebut<br><span>&shy;</span><br>
+Terkait dengan identitas diri, berikut pernyataan yang benar: c. Nomor induk kependudukan adalah data unik<br><span>&shy;</span><br>
+Pada makalah bagian minat, hal berikut benar kecuali: b. Minat tidak perlu diberikan gambar<br><span>&shy;</span><br>
+Hal berikut benar terkait prinsip dalam mencari kelebihan diri, kecuali: c. Terlalu banyak menuliskan kelebihan diri membuat sombong<br><span>&shy;</span><br>
+Data identitas mencakup hal-hal berikut, kecuali: c. Hobi orangtua<br><span>&shy;</span><br>
+Untuk mendapatkan suatu jabatan tertentu, hal-hal berikut benar, kecuali a. Memiliki kedekatan personal dengan pemilik perusahaan<br><span>&shy;</span><br>
+Dalam pembuatan makalah bagian identitas, hal-hal berikut benar kecuali d. Besar foto 1/8 halaman<br><span>&shy;</span><br>
+Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali e. Data kompetensi harus didapat langsung dari situs perusahaan tersebut<br><span>&shy;</span><br>
+Keterangan paling penting untuk keadaan darurat karena kecelakaan : d. Data NIM<br><span>&shy;</span><br>
+Pada makalah bagian kelebihan, hal berikut benar kecuali: d. Semua kekurangan dituliskan dalam beberapa paragraph<br><span>&shy;</span><br>
+Tujuan dari perencanaan tujuan profesional adalah hal berikut, kecuali e. Mengenal kemampuan diri sendiri<br><span>&shy;</span><br>
+Hal-hal berikut terkait dengan pengenalan diri, kecuali : e. Melihat posisi diri sendiri di lingkungan<br><span>&shy;</span><br>
+Untuk narasi, hal-hal berikut benar kecuali : e. Narasi idola dijelaskan dalam beberapa halaman dan fotonya<br><span>&shy;</span><br>
+Kekurangan diri seharusnya: e. Diuyapakan untuk dihilangkan<br><span>&shy;</span><br>
+Hal berikut benar untuk minat, kecuali : b. Minat yang kita rasakan pasti benar<br><span>&shy;</span><br>
+Terkait dengan bakat, berikut hal yang benar, kecuali: c. Kalau anda berbakat pada pekerjaan itu namun kurang berminat, maka pekerjaan tersebut akan <br><br>
+Pada makalah bagian bakat, hal berikut benar kecuali: a. Tidak perlu menampilkan diagram atau gambar<br><span>&shy;</span><br>
+Pada makalah bagian potensi, hal berikut benar kecuali: c. Potensi yang tidak akan terwujud tidak perlu ditulis<br><span>&shy;</span><br>
+Pada makalah bagian kelebihan, hal berikut benar kecuali: c. Kelebihan boleh ditulis dalam bentuk poin-poin.<br><span>&shy;</span><br>
+Dalam pembuatan makalah bagian identitas : e. Identitas dibuat dalam bentuk tabel tak bergaris<br><span>&shy;</span><br>
+<br><span>&shy;</span>
+<br><span>&shy;</span>
+<br><span>&shy;</span>
 =======================================================================================================================================================
 Salah:
-
+<br>
 Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali 
 c. Perlu data lain terkait dengan tujuan
 e. Harus disusun harus dilakukan dengan serius dan sungguh-sungguh
