--- a/manifesto.html
+++ b/manifesto.html
@@ -81,26 +81,26 @@ Dalam pembuatan makalah bagian identitas : e. Identitas dibuat dalam bentuk tabe
 <br><span>&shy;</span>
 <br><span>&shy;</span>
 <br><span>&shy;</span>
-=======================================================================================================================================================
+<hr>
 Salah:
 <br>
-Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali 
-c. Perlu data lain terkait dengan tujuan
-e. Harus disusun harus dilakukan dengan serius dan sungguh-sungguh
-=======================================================================================================================================================
-Kekurangan berikut umumnya ditulis karena sulit dihilangkan :
-Select one:
-a. Tidak percaya diri
-b. Berat badan berlebih
-c. Tabiat buruk
-e. Kebiasaan merokok
-=============================================d. Mudah sakit jika beban kerja berat(?)==================================================================
-Terkait dengan data latar belakang pendidikan anda:
-a. Jurusan di sekolah menengah digunakan untuk menilai usaha yang perlu anda lakukan
-c. Nilai rata-rata ijazah menilai potensi akademik
-d. Nilai Fisika dipakai untuk menilai kemampuan anda belajar di prodi TK
-e. Kelebihan non akademik untuk menilai kemampuan khusus anda
-=============================================b. Kemampuan berolah raga akan mempengaruhi kemampuan akademik di prodi(?)================================
+Terkait dengan perencanaan tujuan professional, hal-hal berikut benar, kecuali <br>
+c. Perlu data lain terkait dengan tujuan<br>
+e. Harus disusun harus dilakukan dengan serius dan sungguh-sungguh<br>
+<hr>
+Kekurangan berikut umumnya ditulis karena sulit dihilangkan :<br>
+Select one:<br>
+a. Tidak percaya diri<br>
+b. Berat badan berlebih<br>
+c. Tabiat buruk<br>
+e. Kebiasaan merokok<br>
+d. Mudah sakit jika beban kerja berat(cuma ini yang belum di coba tapi ??????)<br>
+Terkait dengan data latar belakang pendidikan anda:<br>
+a. Jurusan di sekolah menengah digunakan untuk menilai usaha yang perlu anda lakukan<br>
+c. Nilai rata-rata ijazah menilai potensi akademik<br>
+d. Nilai Fisika dipakai untuk menilai kemampuan anda belajar di prodi TK<br>
+e. Kelebihan non akademik untuk menilai kemampuan khusus anda<br>
+b. Kemampuan berolah raga akan mempengaruhi kemampuan akademik di prodi(bingung coy gada yang bener masa ini sih?)
 </h1>
 </body>
 </html>
